<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Go_AddBus">

    <EditText
        android:id="@+id/ed_01"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/driverName"
        android:inputType="textPersonName"
        android:text="@string/ed_driverName"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ed_04"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/no_seats"
        android:inputType="textPersonName"
        android:text="@string/ed_NoOfSeat"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ed_03"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/vehicleNumber"
        android:inputType="textPersonName"
        android:text="@string/ed_vehicleNo"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ed_02"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/conductorName"
        android:inputType="textPersonName"
        android:text="@string/ed_Conductor"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btn_save"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="116dp"
        android:onClick="buttonSave"
        android:text="@string/button_save"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_04"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="180dp"
        android:text="@string/tx_driver"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/tx_conductor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/tx_vehicleNo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/tx_noOfSeats"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

</androidx.constraintlayout.widget.ConstraintLayout>