<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Go_Deleteacc">


    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="181dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/ch" />

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/roboto_light"
        android:text="@string/homepage3"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FDFCFC"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916"
        app:rippleColor="#000000"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/Red"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        tools:text="@string/delete6" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="349dp"
        android:layout_height="337dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@drawable/de" />

</androidx.constraintlayout.widget.ConstraintLayout>